feat: admin mode - logic for toggling PIN visibility

--- a/react-fe/src/components/PIN/_pin.scss
+++ b/react-fe/src/components/PIN/_pin.scss
@@ -1,3 +1,11 @@
+.pin-manager {
+  align-items: center;
+  background: lightgrey;
+  display: flex;
+  flex-flow: row nowrap;
+  padding: 30px;
+}
+
 .pincode-input-container {}
 
 .pincode-input-text
