feat: admin mode - changed styling to indicate admin mode is active

--- a/react-fe/src/components/PIN/_pin.scss
+++ b/react-fe/src/components/PIN/_pin.scss
@@ -3,7 +3,12 @@
   background: lightgrey;
   display: flex;
   flex-flow: row nowrap;
+  min-height: 100px;
   padding: 30px;
+
+  &.is-admin {
+    border-top: 10px solid limegreen;
+  }
 }
 
 .pincode-input-container {}
