--- a/react-fe/src/components/Views/view.scss
+++ b/react-fe/src/components/Views/view.scss
@@ -1,4 +1,116 @@
+$pg-bck: white;
+$active-cl: #06355a;
+$light-cl: #c0e0f8;
+
+
 .container {
     width: 80%;
     margin: auto;
 }
+
+.tabs {
+    margin-left: 10px;
+
+    .tab {
+        float: left;
+        position: relative;
+    }
+
+    .tab-link {
+        /* Make them block level
+        and only as wide as they need */
+        float: left; 
+        padding: 10px 40px; 
+        text-decoration: none;
+        
+        /* Default colors */ 
+        color: black;
+        background: $light-cl; 
+        
+        /* Only round the top corners */
+        -webkit-border-top-left-radius: 15px;
+        -webkit-border-top-right-radius: 15px;
+        -moz-border-radius-topleft: 15px;
+        -moz-border-radius-topright: 15px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px; 
+    }
+
+    .active {
+        /* Highest, active tab is on top */
+        z-index: 3;
+
+        .tab-link { 
+            /* Colors when tab is active */
+            background: $active-cl; 
+            color: white; 
+        }
+    }
+
+    .tab:before, .tab:after, 
+    .tab a:before, .tab a:after {
+        /* All pseudo elements are 
+            abs. positioned and on bottom */
+        position: absolute;
+        bottom: 0;
+    }
+
+    /* Only the first, last, and active
+        tabs need pseudo elements at all */
+    .tab:last-child:after,   .tab:last-child a:after,
+    .tab:first-child:before, .tab:first-child a:before,
+    .active:after,   .active:before, 
+    .active a:after, .active a:before {
+        content: "";
+    }
+
+    /* Squares */
+    .tab:before, .tab:after {
+        background: $light-cl;
+        width: 10px;
+        height: 10px;
+    }
+    .active:before, .active:after {
+        background: $active-cl; 
+        
+        /* Squares below circles */
+        z-index: 1;
+    }
+    .tab:before {
+        left: -10px;      
+    }
+    .tab:after { 
+        right: -10px;
+    }
+    
+    /* Circles */
+    .tab a:after, .tab a:before {
+        width: 20px; 
+        height: 20px;
+        /* Circles are circular */
+        -webkit-border-radius: 10px;
+        -moz-border-radius:    10px;
+        border-radius:         10px;
+        background: $pg-bck;
+    
+        /* Circles over squares */
+        z-index: 2;
+    }
+    .active a:after, .active a:before {
+        background: $light-cl;
+    }
+    /* First and last tabs have different
+    outside color needs */
+    .tab:first-child.active a:before,
+    .tab:last-child.active a:after {
+        background: $pg-bck;
+    }
+    .tab a:before {
+        left: -20px;
+    }
+    .tab a:after {
+        right: -20px;
+    }
+}
+
+
