--- a/react-fe/src/components/Table/table.scss
+++ b/react-fe/src/components/Table/table.scss
@@ -28,6 +28,8 @@ $bg-color: ghostwhite;
         padding: 8px 6px;
         text-align: center;
         border: 1px solid white;
+        border-top: 0px;
+        border-bottom: 2px solid white;
     }
 
     .tableItem:first-of-type {
