--- a/react-fe/src/components/Table/table.scss
+++ b/react-fe/src/components/Table/table.scss
@@ -41,7 +41,6 @@ $bg-color: ghostwhite;
 
 .checkbox-container {
     position: relative;
-    cursor: pointer;
     font-size: 22px;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -51,13 +50,13 @@ $bg-color: ghostwhite;
     input {
         position: absolute;
         opacity: 0;
-        cursor: pointer;
         height: 0;
         width: 0;
     }
 
     .checkmark {
         display: inline-block;
+        cursor: pointer;
         height: 25px;
         width: 25px;
         background-color: $bg-color;
@@ -93,5 +92,11 @@ $bg-color: ghostwhite;
         -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
         transform: rotate(45deg);
-      }
+    }
+
+    & input:disabled ~ .checkmark{
+        background-color: $bg-color;
+        border: 1px solid $bg-color;
+        cursor: default;
+    }
 }
