feat: added emoji selection

--- a/react-fe/src/assets/app.scss
+++ b/react-fe/src/assets/app.scss
@@ -1,3 +1,4 @@
 @import '../components/PIN/pin';
+@import '../components/Table/emotions';
 @import '../components/Table/table';
 @import '../components/Views/view';
